# flutter_aria2

./: .gitignore  CODE_REVIEW_2026-02-25.md  README.md  README_zh.md  pubspec.yaml
.github/workflows/: build.yml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: flutter_aria2_native_jni.cpp
android/src/main/kotlin/me/junjie/xing/flutter_aria2/: Aria2NativeException.kt  Aria2NativeManager.kt  FlutterAria2Plugin.kt
android/src/test/kotlin/me/junjie/xing/flutter_aria2/: FlutterAria2PluginTest.kt
build_tool/: sync_deps.dart
common/: aria2_core.cpp  aria2_core.h  aria2_helpers.cpp  aria2_helpers.h
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/me/junjie/xing/flutter_aria2_example/: MainActivity.kt
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/macos/RunnerTests/: RunnerTests.swift
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
ios/: flutter_aria2.podspec
ios/Classes/: FlutterAria2Native.mm  FlutterAria2Plugin.h  FlutterAria2Plugin.m  FlutterAria2Plugin.swift
lib/: flutter_aria2.dart  flutter_aria2_method_channel.dart  flutter_aria2_platform_interface.dart
linux/: CMakeLists.txt  flutter_aria2_plugin.cc  flutter_aria2_plugin_private.h
linux/include/flutter_aria2/: flutter_aria2_plugin.h
linux/test/: flutter_aria2_plugin_test.cc
macos/: flutter_aria2.podspec
macos/Classes/: FlutterAria2Native.h  FlutterAria2Native.mm  FlutterAria2Plugin.swift  aria2_common_sources.cpp
test/: flutter_aria2_method_channel_test.dart  flutter_aria2_test.dart
windows/: CMakeLists.txt  flutter_aria2_plugin.cpp  flutter_aria2_plugin.h  flutter_aria2_plugin_c_api.cpp
windows/include/flutter_aria2/: flutter_aria2_plugin_c_api.h
windows/test/: flutter_aria2_plugin_test.cpp
